crates/mlcg_builtin_macros/tests/ui/fail_duplicate_role.stderr
error: instruction `bad` classifies parameter `slot` more than once
 --> tests/ui/fail_duplicate_role.rs:2:5
  |
2 |     mlcg_builtin_macros::include_manifest!("tests/duplicate_role_manifest.toml");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mlcg_builtin_macros::include_manifest` (in Nightly builds, run with -Z macro-backtrace for more info)
