crates/mlcg_builtin_macros/tests/ui/fail_duplicate_role.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/duplicate_role_manifest.toml");
}

fn main() {}
